# chat26

./: .gitignore  README.md
backend/: Cargo.toml  typeshare.toml
backend/src/: internal_types.rs  main.rs  shared_types.rs
frontend/: .env.development  env.dev  next.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  envConfig.ts  index.tsx  styles.css  types.ts  websocket.ts
frontend/src/app/: layout.tsx  page.module.css  page.tsx  store.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/middleware/: websocket.ts
frontend/src/app/utils/: websocket.ts
frontend/src/components/: ChatRoom.tsx
frontend/src/features/: chatSlice.ts  userSlice.ts
frontend/src/i18n/: request.ts
frontend/src/lib/: store.ts
frontend/src/lib/features/: chatSlice.ts  socketSlice.ts  userSlice.ts
frontend/src/pages/: ChatView.tsx  Welcome.tsx
frontend/src/types/: shared-types.ts
