[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tungstenite = "0.26.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
typeshare = "1.0.4"
tokio-tungstenite = "*"
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
futures-channel = "0.3.31"
futures-util = "0.3.31"
chrono = "0.4.41"


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
